--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
         "@tailwindcss/ui": "^0.1.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "laravel-echo": "^1.8.1",
         "laravel-jetstream": "^0.0.3",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
         "postcss-import": "^12.0.1",
+        "pusher-js": "^7.0.0",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
